--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,5 @@
 #container{
-  background-image: url("../../assets/img/splash1.jpg");
+  background-image: url("http://cdn.duitang.com/uploads/item/201510/10/20151010002328_B3jYF.jpeg");
   background-repeat: repeat-y;
   vertical-align: middle;
   text-align: center;
