--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,5 @@
 .container{
   position: absolute;
-  top: 15%;
   width: 100%;
   height: 100%;
 }
@@ -10,6 +9,7 @@
   text-align: center;
 }
 .top_pic{
+  margin-top: 30%;
   width: 50%;
   background-repeat: repeat-y;
 }
